# wingrc

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  docker-compose.override.yml.example  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  assessment.py  audit.py  auth.py  baseline.py  bundle_service.py  catalog.py  cli.py  config.py  db.py  domain.py  engine.py  main.py  manage.py  models.py  reconcile.py  render.py  repo.py  storage.py
backend/app/ai/: __init__.py  anthropic_.py  base.py  none_.py
backend/app/importers/: __init__.py  document.py  workbook.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial.py  0002_assessment_engine.py  0003_catalog_objective_tags.py  0004_contacts_raci.py  0005_statement_per_objective_and_guidance.py  0006_baseline_control_coverage_basis.py  0007_evidence_kind_reference.py  0008_control_cmmc_level.py  0009_evidence_task_many_to_many.py  0010_deactivation_and_audit.py  0011_org_profile.py  0012_system_description.py  0013_contact_documentation_roles.py  0014_evidence_sha256.py  0015_auth_users.py  0016_app_role.py  0017_api_login_method.py
backend/app/routers/: assessments.py  auth.py  bundle.py  contacts.py  evidence.py  frameworks.py  orgs.py  users.py
backend/app/seeds/: baselines.py  catalog.py  cmmc_l2.yaml
backend/baselines/: rocketcyber.yaml
backend/tests/: conftest.py  test_api_tokens.py  test_assessment_engine.py  test_audit_auth.py  test_auth.py  test_auth_cookies.py  test_bundle.py  test_catalog_seed.py  test_cmmc_level.py  test_contacts_raci.py  test_cors.py  test_deactivation.py  test_document_ingest.py  test_evidence_api.py  test_evidence_tasks.py  test_magic_loop.py  test_migrations.py  test_onboarding.py  test_org_access_guard.py  test_orgs.py  test_patch_control_state.py  test_products_api.py  test_route_guards.py  test_scope_loop.py  test_statement_endpoints.py  test_storage.py  test_task_evidence.py
baselines/: README.md  rocketcyber.yaml
deploy/nginx/: Dockerfile  nginx.conf
docs/: PLAN-auth-rbac-completion.md  architecture.md  deployment.md  fips.md  roadmap.md
docs/adr/: 0001-record-architecture-decisions.md  0002-stack-selection.md  0003-scope-graph-as-source-of-truth.md  0004-full-platform-and-ingestion.md  0005-deployment-topology-per-msp-not-shared-saas.md
frontend/: Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AssessmentBoard.tsx  ContactDrawer.tsx  ContactsPanel.tsx  ControlDrawer.tsx  ControlSection.tsx  EvidenceSection.tsx  EvidenceTasksPanel.tsx  FamilySection.tsx  LoginPage.tsx  ObjectiveRow.tsx  OnboardingWizard.tsx  OrgPicker.tsx  OrgSettings.tsx  (+5 more)
samples/: authorized-entities.example.xlsx
scripts/: make_example_workbook.py
(+3 files in other folders)
