[project]
name = "wingrc-backend"
version = "0.1.0"
description = "WinGRC — open CMMC scope and documentation tooling"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1",
    "typer>=0.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
]
ai = [
    "anthropic>=0.40",
    "pypdf>=5.0",
    "python-docx>=1.1",
]

[project.scripts]
wingrc = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--basetemp=../.pyt-tmp"
