[project]
name = "wingrc-backend"
version = "0.1.0"
description = "WinGRC — open CMMC scope and documentation tooling"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1",
    "typer>=0.15",
    "pyyaml>=6.0",
    "boto3>=1.35",
    "msal>=1.20",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx2",
]
ai = [
    "anthropic>=0.40",
    "pypdf>=5.0",
    "python-docx>=1.1",
]

[project.scripts]
wingrc = "app.cli:app"
wingrc-admin = "app.manage:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
cache-dir = "/tmp/ruff-cache"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/cli.py" = ["B008"]
"app/main.py" = ["B008"]
"app/routers/assessments.py" = ["B008"]
"app/routers/evidence.py" = ["B008"]
"app/routers/frameworks.py" = ["B008"]
"app/routers/bundle.py" = ["B008"]
"app/routers/contacts.py" = ["B008"]
"app/routers/orgs.py" = ["B008"]
"app/auth.py" = ["B008"]
"app/routers/auth.py" = ["B008"]
"app/routers/users.py" = ["B008"]
"app/manage.py" = ["B008"]
"tests/test_auth.py" = ["I001"]
"tests/test_auth_cookies.py" = ["I001"]

[tool.pytest.ini_options]
addopts = "--basetemp=/tmp/pyt-tmp"
cache_dir = "/tmp/pytest-cache"
markers = [
    "integration: requires a running Postgres database (skipped when DB unavailable)",
]
